<resources>
    <string name="app_name">HSM</string>
    <string name="input_error_name">Please enter the name</string>
    <string name="input_error_email">please enter the email</string>
    <string name="input_error_phone">Enter the phone number</string>
    <string name="input_error_phone_invalid">Enter 10 digit number</string>
    <string name="input_error_password">Enter the password</string>
    <string name="input_error_password_length">Password length must be 6 character</string>
    <string name="input_confocode_msg">Enter correct password</string>
    <string name="title_activity_event_display">event_display</string>
    <string name="input_error_event_name">Cannot Be Empty</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="associates">Associates</string>
    <string name="complain">Complain</string>
    <string name="notice">Notice</string>
    <string name="events">Events</string>

    <string name="add_associate">Add Associate</string>
    <string name="salary">Salary</string>
    <string name="works_as">Works As</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="contact">Contact</string>
    <string name="register_associates">Register Associates</string>
    <string name="latest_updates">Latest Updates</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="add_event">Add Event</string>
    <string name="upload">Upload</string>
    <string name="announcements">Announcements</string>
    <string name="add_announcement">Add Announcement</string>
    <string name="enter_caption">Enter Caption</string>
    <string name="upload_moments">Upload Moments</string>
    <string name="select_image">Select Image</string>
    <string name="app_logo">App Logo</string>
    <string name="procurement">Procurement</string>
    <string name="transaction">Transaction</string>
    <string name="g_shoplist">Grossary Shop List</string>
    <string name="name">Name</string>
    <string name="shop_owner_name">Shop Owner Name</string>
    <string name="grossary_shop_list">Grossary Shop List</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_contact">Shop Contact</string>
    <string name="transactio_name">Online Pay</string>
    <string name="delete_event">DELETE EVENT</string>
    <string name="delete_notice">DELETE NOTICE</string>
    <string name="delete_comlpaint">DELETE COMPLAINT</string>
</resources>
