<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".home_activity"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:itemTextColor="@color/saps_start"
        app:menu="@menu/drawer_menu">
    </com.google.android.material.navigation.NavigationView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600dp">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar">
        </include>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="590dp"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_upcoming_events"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/upcoming_events"
                    android:textSize="30sp">
                </TextView>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec_upcoming_events"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layoutDirection="ltr">

                </androidx.recyclerview.widget.RecyclerView>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
                <Button
                    android:id="@+id/add_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_style"
                    android:onClick="addEvent"
                    android:padding="5dp"
                    android:text="@string/add_event"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/White">
                </Button>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_style"
                    android:onClick="deleteEvent"
                    android:padding="5dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/delete_event"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/White"/>
</LinearLayout>
                <TextView
                    android:id="@+id/text_notices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Notices"
                    android:textSize="30sp">
                </TextView>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec_notices"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layoutDirection="ltr">
                </androidx.recyclerview.widget.RecyclerView>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_style"
                    android:onClick="deleteNotice"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/delete_notice"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/White"/>
</LinearLayout>
                <TextView
                    android:id="@+id/text_complaints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Complaints"
                    android:textSize="30sp">
                </TextView>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec_complaints"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layoutDirection="ltr">
                </androidx.recyclerview.widget.RecyclerView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_style"
                        android:onClick="deleteComplaint"
                        android:padding="5dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/delete_comlpaint"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/White"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/my_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:itemBackground="@color/saps_end"
            app:itemTextColor="@color/White"
            app:menu="@menu/menu_nav"
            tools:ignore="MissingConstraints">
        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>

